Changed body background color to white

--- a/DBmini/static/css/home.css
+++ b/DBmini/static/css/home.css
@@ -13,7 +13,7 @@ header h1 {
 body {
   margin: 0%;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  background-color: #f5f9fb; /* Subtle off-white */
+  background-color: #ffffff; /* Subtle off-white */
   color: #343a40; /* Dark slate */
 }
 nav {
